--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@awesomeorganization/servers",
   "description": "[ESM] The easiest way to create http, http2, https, https2, tcp, tls, udp servers in Node.js",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "main.js",
   "type": "module",
   "repository": "github:awesomeorganization/servers",
   "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "test": "node test.js"
   },
@@ -13,7 +16,20 @@
     "name": "sergeysedoy97"
   },
   "devDependencies": {
-    "eslint-config-prettier": "latest"
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-node": "latest"
+  },
+  "peerDependencies": {
+    "eslint": "latest",
+    "prettier": "latest"
+  },
+  "peerDependenciesMeta": {
+    "eslint": {
+      "optional": true
+    },
+    "prettier": {
+      "optional": true
+    }
   },
   "keywords": [
     "http",
