--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+.deepsource.toml
 .editorconfig
 .eslintignore
 .eslintrc.json
@@ -6,5 +7,8 @@
 .prettierrc.json
 .vscode
 *.log
+example
+LICENSE
 node_modules
-test.js
+README.md
+test
