--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,3 +6,8 @@ enabled = true
 
   [analyzers.meta]
   environment = ["nodejs"]
+  module_system = "es-modules"
+
+[[transformer]]
+name = "prettier"
+enabled = true
