--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@awesomeorganization/servers",
   "description": "[ESM] The easiest way to create http, http2, https, https2, tcp, tls, udp servers in Node.js",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "exports": "./main.js",
   "type": "module",
   "repository": "github:awesomeorganization/servers",
@@ -9,9 +9,18 @@
   "author": {
     "name": "sergeysedoy97"
   },
+  "scripts": {
+    "test": "node test/all.test.js"
+  },
+  "engines": {
+    "node": ">=11.13.0"
+  },
   "devDependencies": {
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-node": "11.1.0"
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-github": "4.3.5",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-sonarjs": "0.12.0",
+    "husky": "^7.0.4"
   },
   "keywords": [
     "http",
