--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,13 @@
 {
-  "env": {
-    "es2022": true,
-    "node": true
-  },
-  "extends": ["eslint:recommended", "plugin:node/recommended", "plugin:github/recommended", "plugin:sonarjs/recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/recommended",
+    "plugin:node/recommended",
+    "plugin:prettier/recommended",
+    "plugin:promise/recommended",
+    "plugin:regexp/recommended",
+    "plugin:sonarjs/recommended"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "impliedStrict": true
@@ -11,53 +15,81 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["node", "github", "sonarjs"],
+  "root": true,
   "rules": {
-    "arrow-body-style": ["warn", "always"],
-    "camelcase": "warn",
-    "consistent-return": "warn",
-    "curly": "warn",
-    "default-case-last": "warn",
-    "dot-notation": "warn",
-    "eqeqeq": "warn",
-    "eslint-comments/no-use": "off",
-    "filenames/match-regex": "off",
-    "i18n-text/no-en": "off",
-    "import/extensions": ["warn", "always"],
+    "array-callback-return": "error",
+    "camelcase": "error",
+    "capitalized-comments": "error",
+    "class-methods-use-this": "error",
+    "consistent-return": "error",
+    "default-case": "error",
+    "default-case-last": "error",
+    "default-param-last": "error",
+    "dot-notation": "error",
+    "eqeqeq": "error",
     "import/no-unresolved": "off",
-    "no-duplicate-imports": "warn",
-    "no-lonely-if": "warn",
-    "no-return-assign": "warn",
-    "no-return-await": "warn",
-    "no-unused-vars": "warn",
-    "no-use-before-define": "warn",
-    "no-var": "warn",
-    "node/exports-style": ["warn", "module.exports"],
-    "node/file-extension-in-import": ["warn", "always"],
+    "new-cap": "error",
+    "no-await-in-loop": "error",
+    "no-console": "error",
+    "no-duplicate-imports": "error",
+    "no-else-return": "error",
+    "no-empty-function": "error",
+    "no-invalid-this": "error",
+    "no-lone-blocks": "error",
+    "no-loop-func": "error",
+    "no-multi-str": "error",
+    "no-promise-executor-return": "error",
+    "no-return-await": "error",
+    "no-template-curly-in-string": "error",
+    "no-throw-literal": "error",
+    "no-unmodified-loop-condition": "error",
+    "no-unneeded-ternary": "error",
+    "no-unreachable-loop": "error",
+    "no-unused-private-class-members": "error",
+    "no-use-before-define": "error",
+    "no-useless-call": "error",
+    "no-useless-computed-key": "error",
+    "no-useless-concat": "error",
+    "no-useless-constructor": "error",
+    "no-useless-rename": "error",
+    "no-useless-return": "error",
+    "no-var": "error",
+    "node/file-extension-in-import": "error",
+    "node/handle-callback-err": "error",
+    "node/no-callback-literal": "error",
     "node/no-missing-import": "off",
-    "node/no-unsupported-features/es-syntax": "warn",
-    "node/prefer-global/buffer": ["warn", "always"],
-    "node/prefer-global/console": ["warn", "always"],
-    "node/prefer-global/process": ["warn", "always"],
-    "node/prefer-global/text-decoder": ["warn", "always"],
-    "node/prefer-global/text-encoder": ["warn", "always"],
-    "node/prefer-global/url": ["warn", "always"],
-    "node/prefer-global/url-search-params": ["warn", "always"],
-    "node/prefer-promises/dns": "warn",
-    "node/prefer-promises/fs": "warn",
-    "object-shorthand": "warn",
-    "prefer-arrow-callback": "warn",
-    "prefer-const": "warn",
-    "prefer-rest-params": "warn",
-    "prefer-spread": "warn",
-    "require-await": "warn",
+    "node/prefer-global/buffer": "error",
+    "node/prefer-global/console": "error",
+    "node/prefer-global/process": "error",
+    "node/prefer-global/text-decoder": "error",
+    "node/prefer-global/text-encoder": "error",
+    "node/prefer-global/url": "error",
+    "node/prefer-global/url-search-params": "error",
+    "node/prefer-promises/dns": "error",
+    "node/prefer-promises/fs": "error",
+    "object-shorthand": "error",
+    "operator-assignment": "error",
+    "prefer-const": "error",
+    "prefer-destructuring": "error",
+    "prefer-exponentiation-operator": "error",
+    "prefer-named-capture-group": "error",
+    "prefer-numeric-literals": "error",
+    "prefer-object-has-own": "error",
+    "prefer-promise-reject-errors": "error",
+    "prefer-regex-literals": "error",
+    "prefer-rest-params": "error",
+    "prefer-spread": "error",
+    "prefer-template": "error",
+    "radix": "error",
+    "require-await": "error",
     "sonarjs/cognitive-complexity": "off",
-    "sonarjs/no-duplicate-string": "warn",
-    "sonarjs/no-identical-functions": "warn",
+    "sonarjs/max-switch-cases": "off",
+    "sonarjs/no-duplicate-string": "off",
     "sonarjs/no-nested-switch": "off",
-    "sonarjs/no-small-switch": "warn",
-    "sort-imports": "warn",
-    "sort-keys": "warn",
-    "sort-vars": "warn"
+    "sonarjs/no-small-switch": "off",
+    "sort-imports": "error",
+    "sort-keys": "error",
+    "spaced-comment": "error",
+    "yoda": "error"
   }
 }
