--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,10 @@
 {
   "recommendations": [
-    "aaron-bond.better-comments",
     "amatiasq.sort-imports",
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
-    "mgmcdermott.vscode-language-babel",
+    "exodiusstudios.comment-anchors",
     "sonarsource.sonarlint-vscode",
     "visualstudioexptteam.vscodeintellicode"
   ]
