--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm": ">=8.0.0"
   },
   "files": [
+    "main.d.ts",
     "main.js"
   ],
   "homepage": "https://github.com/awesomeorganization/servers",
